--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             <img class="seta" onclick="RolarParaDireita()" id="direita" src="imagens/icones/direita.svg" alt="">
         </div>
     </div>
+    
+    <div id="saiba">
+        <a href="./Produtos/produtos.html">Saiba mais</a>
+    </div>
 
     <!-- Contate-nos -->
     <div id="contato">
