--- a/Produtos/produtos.html
+++ b/Produtos/produtos.html
@@ -15,27 +15,27 @@
     <div id="produtos">
         <div class="card">
             <p class="texto">Id. Visual</p>
-            <a href=""><img id="identidade" src="./imagens/identidade.svg" alt=""></a>
+            <a href="./Identidade Visual/idvisual.html"><img id="identidade" src="./imagens/identidade.svg" alt=""></a>
         </div>
 
         <div class="card">
             <p class="texto">Marketing Digital</p>
-            <a href=""><img id="mkdigital" src="./imagens/mkdigital.svg" alt=""></a>
+            <a href="./Mk Digital/mkdigital.html"><img id="mkdigital" src="./imagens/mkdigital.svg" alt=""></a>
         </div>
 
         <div class="card">
             <p class="texto">Web Designer</p>
-            <a href=""><img id="webdesigner" src="./imagens/webdesigner.svg" alt=""></a>
+            <a href="./Web Designer/webdesigner.html"><img id="webdesigner" src="./imagens/webdesigner.svg" alt=""></a>
         </div>
 
         <div class="card">
             <p class="texto">Des. de Sites</p>
-            <a href=""><img id="desenvolvedor" src="./imagens/dev.svg" alt=""></a>
+            <a href="./Des. Sites/dvsite.html"><img id="desenvolvedor" src="./imagens/dev.svg" alt=""></a>
         </div>
 
         <div class="card">
             <p class="texto">Desing Gráfico</p>
-            <a href=""><img id="dsgrafico" src="./imagens/desgrafico.svg" alt=""></a>
+            <a href="./Designer Gráfico/dsgrafico.html"><img id="dsgrafico" src="./imagens/desgrafico.svg" alt=""></a>
         </div>
     </div>
 </body>
