--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
         </div>
     </div>
     
-    <div id="saiba">
+    <!--<div id="saiba">
         <a href="./Produtos/produtos.html">Saiba mais</a>
-    </div>
-
+    </div>-->
+    
     <!-- Contate-nos -->
     <div id="contato">
         <h1 id="tituloformulario">Contate-nos</h1>
