inserção de novas páginas

--- a/Produtos/Designer Gráfico/dsgrafico.html
+++ b/Produtos/Designer Gráfico/dsgrafico.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,42 @@
     <title>Designer Gráfico</title>
 </head>
 <body>
+    <div id="tituloid">
         <h1>Designer Gráfico</h1>
+    </div>
+
+    <div id="corpo">
+        <div>
+            <img src="./imagem/dsgrafico.jpg" alt="">
+        </div>
+
+        <div>
+            <p id="txtcorpo">O serviço de design gráfico da ANTN Designer é projetado para oferecer soluções visuais criativas e eficazes que ajudam nossos clientes a destacar suas marcas e se comunicar de forma impactante com seu público-alvo. Nossa equipe de designers gráficos altamente talentosos e experientes trabalha em estreita colaboração com os clientes para criar projetos personalizados que atendam às suas necessidades e objetivos específicos.<br><br>
+
+            Nossos serviços de design gráfico incluem:<br>
+
+            <b>1. Identidade Visual:</b> Criamos identidades visuais distintas e memoráveis para marcas e empresas. Isso envolve o desenvolvimento de logotipos, paletas de cores, escolha de tipografia e elementos visuais consistentes que refletem a essência da marca.<br><br>
+
+            <b>2. Materiais de Marketing:</b> Desenvolvemos materiais de marketing impressos, como folhetos, cartões de visita, catálogos, pôsteres e banners, que capturam a atenção do público e comunicam a mensagem da marca de forma clara e atraente.<br><br>
+
+            <b>3. Design de Embalagens:</b> Criamos designs de embalagens atraentes e funcionais que se destacam nas prateleiras e cativam os consumidores, ajudando nossos clientes a transmitirem a proposta de valor de seus produtos.<br><br>
+
+        </div>
+    </div>
+
+    <div id="corpodois">
+        <b>4. Design de Materiais Digitais:</b> Oferecemos serviços de design gráfico para materiais digitais, como interfaces de usuário (UI) para aplicativos e websites, banners digitais, infográficos e outros elementos visuais online.<br><br>
+
+        <b>5. Ilustrações e Gráficos Personalizados:</b> Nossa equipe é especializada em criar ilustrações e gráficos personalizados que dão um toque exclusivo aos projetos, tornando-os autênticos e únicos.<br><br>
+
+        <b>6. Design de Redes Sociais:</b> Criamos conteúdo visual envolvente e de alta qualidade para as redes sociais de nossos clientes, ajudando-os a atrair e envolver seu público nas plataformas de mídia social.<br><br>
+
+        <b>7. Design de Experiência do Usuário (UX):</b> Ao desenvolver materiais digitais, consideramos a experiência do usuário (UX) para garantir que os designs sejam intuitivos, fáceis de usar e proporcionem uma experiência positiva para os usuários.<br><br>
+
+        Em cada projeto, dedicamos tempo para entender as necessidades, objetivos e valores de nossos clientes. A colaboração e a comunicação aberta são fundamentais para garantir que o design gráfico atenda às expectativas e que o cliente esteja satisfeito com o resultado final.<br><br>
+
+        Nosso compromisso é fornecer soluções de design gráfico de alta qualidade que se destaquem no mercado, impulsionem o sucesso de nossos clientes e criem uma conexão significativa com seu público-alvo. Valorizamos a criatividade, a inovação e a busca contínua pela excelência em tudo o que fazemos.
+    </div>
+
 </body>
 </html>
