--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
         </div>
     </div>
     
-    <!--<div id="saiba">
-        <a href="./Produtos/produtos.html">Saiba mais</a>
-    </div>-->
+    <div id="saiba">
+        <button><a href="./Produtos/produtos.html" target="_blank">Saiba mais</a></button>
+    </div>
     
     <!-- Contate-nos -->
     <div id="contato">
